Fix imports - project builds

--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -36,7 +36,7 @@
     "@bodiless/fclasses": "^1.0.0-rc.25",
     "@bodiless/i18n": "^1.0.0-rc.25",
     "@bodiless/vital-accordion": "^1.0.0-rc.25",
-    "@bodiless/vital-button": "^1.0.0-rc.25",
+    "@bodiless/vital-buttons": "^1.0.0-rc.25",
     "@bodiless/vital-card": "^1.0.0-rc.25",
     "@bodiless/vital-editors": "^1.0.0-rc.25",
     "@bodiless/vital-elements": "^1.0.0-rc.25",
@@ -46,6 +46,7 @@
     "@bodiless/vital-link": "^1.0.0-rc.25",
     "@bodiless/vital-list": "^1.0.0-rc.25",
     "@bodiless/vital-navigation": "^1.0.0-rc.25",
+    "@bodiless/vital-search": "^1.0.0-rc.25",
     "@bodiless/vital-table": "^1.0.0-rc.25",
     "@bodiless/vital-templates": "^1.0.0-rc.25",
     "@bodiless/vital-youtube": "^1.0.0-rc.25",
