feat(knapsack-renderer, vital-card, vital-elements): Fix type issues, update knapsack packages

--- a/packages/knapsack-renderer/package.json
+++ b/packages/knapsack-renderer/package.json
@@ -14,29 +14,32 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:lib && npm run build:api-doc",
+    "build:lib": "tsc -p ./tsconfig.json",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
+    "build:watch": "npm run build:lib -- --watch",
     "start": "npm run build -- --watch",
-    "clean": "rm -rf ./lib",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx ./src ./tests",
-    "test": "ava"
+    "test": "ava",
+    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-react": "^7.16.0",
-    "@knapsack/app": "^3.103.3",
-    "@knapsack/core": "^3.103.3",
-    "@knapsack/file-utils": "^3.103.3",
-    "@knapsack/renderer-react": "^3.103.3",
-    "@knapsack/renderer-webpack-base": "^3.103.3",
-    "@knapsack/types": "^3.103.3",
-    "@knapsack/utils": "^3.103.3",
+    "@knapsack/app": "^3.105.5",
+    "@knapsack/core": "^3.105.5",
+    "@knapsack/file-utils": "^3.105.5",
+    "@knapsack/renderer-react": "^3.105.5",
+    "@knapsack/renderer-webpack-base": "^3.105.5",
+    "@knapsack/types": "^3.105.5",
+    "@knapsack/utils": "^3.105.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@bodiless/fclasses": "^1.0.0-rc.25",
-    "@knapsack/test-ava": "^3.103.3",
-    "@knapsack/typescript-config-starter": "^3.103.3",
+    "@knapsack/test-ava": "^3.105.5",
+    "@knapsack/typescript-config-starter": "^3.105.5",
     "@types/babel__core": "^7.1.16",
     "@types/node": "^16",
     "@types/react": "^17.0.39",
