--- a/packages/bodiless-layouts-ui/package.json
+++ b/packages/bodiless-layouts-ui/package.json
@@ -30,6 +30,7 @@
     "@bodiless/fclasses": "^1.0.0-rc.29",
     "@bodiless/layouts": "^1.0.0-rc.29",
     "@bodiless/ui": "^1.0.0-rc.29",
+    "lodash": "^4.17.19",
     "re-resizable": "^4.11.0",
     "react-sortable-hoc": "^2.0.0"
   },
