--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -35,12 +35,21 @@
     "@bodiless/core": "^1.0.0-rc.31",
     "@bodiless/fclasses": "^1.0.0-rc.31",
     "@bodiless/i18n": "^1.0.0-rc.31",
+    "@bodiless/vital-accordion": "^1.0.0-rc.31",
+    "@bodiless/vital-buttons": "^1.0.0-rc.31",
     "@bodiless/vital-card": "^1.0.0-rc.31",
+    "@bodiless/vital-editors": "^1.0.0-rc.31",
     "@bodiless/vital-elements": "^1.0.0-rc.31",
+    "@bodiless/vital-flowcontainer": "^1.0.0-rc.31",
+    "@bodiless/vital-image": "^1.0.0-rc.31",
     "@bodiless/vital-layout": "^1.0.0-rc.31",
     "@bodiless/vital-link": "^1.0.0-rc.31",
+    "@bodiless/vital-list": "^1.0.0-rc.31",
     "@bodiless/vital-navigation": "^1.0.0-rc.31",
+    "@bodiless/vital-search": "^1.0.0-rc.31",
+    "@bodiless/vital-table": "^1.0.0-rc.31",
     "@bodiless/vital-templates": "^1.0.0-rc.31",
+    "@bodiless/vital-youtube": "^1.0.0-rc.31",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
