WIP using static replacement

--- a/sites/vital-demo/.env.site
+++ b/sites/vital-demo/.env.site
@@ -69,3 +69,6 @@ BODILESS_DOCS_API_ENABLED=1
 # BODILESS_DEFAULT_CONTENT_AUTO_DISCOVERY_DEPTH='1'
 
 GATSBY_TELEMETRY_DISABLED=1
+
+BODILESS_BUILD_STATS=1
+# BODILESS_OPEN_STATS=1
