--- a/packages/vital-content-listing/package.json
+++ b/packages/vital-content-listing/package.json
@@ -39,6 +39,7 @@
     "@bodiless/vital-card": "^1.0.0-rc.33",
     "@bodiless/vital-elements": "^1.0.0-rc.33",
     "@bodiless/vital-flowcontainer": "^1.0.0-rc.33",
+    "@bodiless/vital-templates": "^1.0.0-rc.33",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
