feat(chore): Add knapsack specs for Car, Elements, Accordions and templates. Reorganized code to keep specs close to components

--- a/packages/vital-templates/package.json
+++ b/packages/vital-templates/package.json
@@ -51,6 +51,7 @@
     "@bodiless/vital-navigation": "^1.0.0-rc.25",
     "@bodiless/vital-search": "^1.0.0-rc.25",
     "@bodiless/vital-youtube": "^1.0.0-rc.25",
+    "@bodiless/knapsack-renderer": "^1.0.0-rc.25",
     "lodash": "^4.17.19"
   }
 }
