--- a/packages/vital-accordion/package.json
+++ b/packages/vital-accordion/package.json
@@ -38,6 +38,7 @@
     "@bodiless/schema-org": "^1.0.0-rc.25",
     "@bodiless/vital-editors": "^1.0.0-rc.25",
     "@bodiless/vital-elements": "^1.0.0-rc.25",
+    "@bodiless/knapsack-renderer": "^1.0.0-rc.25",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
