--- a/packages/vital-buttons/package.json
+++ b/packages/vital-buttons/package.json
@@ -42,6 +42,7 @@
     "@bodiless/vital-editors": "^1.0.0-rc.25",
     "@bodiless/vital-elements": "^1.0.0-rc.25",
     "@bodiless/vital-link": "^1.0.0-rc.25",
+    "@bodiless/knapsack-renderer": "^1.0.0-rc.25",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
