--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -33,6 +33,7 @@
     "@bodiless/cli": "^1.0.0-rc.33",
     "@bodiless/components": "^1.0.0-rc.33",
     "@bodiless/core": "^1.0.0-rc.33",
+    "@bodiless/core-ui": "^1.0.0-rc.33",
     "@bodiless/fclasses": "^1.0.0-rc.33",
     "@bodiless/hydration": "^1.0.0-rc.33",
     "@bodiless/knapsack-renderer": "^1.0.0-rc.33",
