--- a/sites/knapsack/package.json
+++ b/sites/knapsack/package.json
@@ -44,6 +44,7 @@
     "react": "^17.0.2",
     "esm": "^3.2.25",
     "crypto-browserify": "^3.12.0",
+    "glob": "^7.1.6",
     "path-browserify": "^1.0.1",
     "postcss-loader": "^6.2.1",
     "stream-browserify": "^3.0.0",
