--- a/packages/bodiless-ga4/package.json
+++ b/packages/bodiless-ga4/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
-  "sideEffects": "false",
+  "sideEffects": false,
   "files": [
     "/lib",
     "/doc",
