--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "start": "lerna run start --stream --scope @sites/${APP_SITE_NAME:-test-site}",
     "sync:fix": "syncpack fix-mismatches",
     "sync:check": "syncpack list-mismatches",
-    "test": "jest",
+    "test": "jest && npm run test:packages",
+    "test:packages": "lerna run test",
     "test:monorepo-pw": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-monorepo http://localhost:8005 pw:run",
     "test:ci": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-test http://localhost:8005 cy:run",
     "test:monorepo": "WAIT_ON_TIMEOUT=600000 start-server-and-test sites:launch-monorepo http://localhost:8005 cy:run",
