--- a/.github/workflows/build-test-lint-simple.yml
+++ b/.github/workflows/build-test-lint-simple.yml
@@ -8,7 +8,7 @@ on:
     types: [labeled]
     branches:
       - main
-      - upgrade/*
+      - 'upgrade/**'
 jobs:
   setup:
     name: Setup, Build, Lint and Test
