chore(components, navigation, layouts): Remove edit code from static site. (#2045)
## Changes
Remove edit code from flow container, chameleon, lists, file uploads, menus/breadcrumbs, etc.

--- a/packages/vital-content-listing/package.json
+++ b/packages/vital-content-listing/package.json
@@ -39,6 +39,7 @@
     "@bodiless/vital-card": "^1.0.0-rc.37",
     "@bodiless/vital-elements": "^1.0.0-rc.37",
     "@bodiless/vital-flowcontainer": "^1.0.0-rc.37",
+    "@bodiless/vital-templates": "^1.0.0-rc.37",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
