--- a/.github/workflows/knapsack.yml
+++ b/.github/workflows/knapsack.yml
@@ -6,7 +6,7 @@ env:
 on:
   push:
     branches:
-      - feat/knapsack # Note: temporary until PR merged into main
+      - master # Note: temporary until PR merged into main
 
 jobs:
   # build:
@@ -25,7 +25,7 @@ jobs:
 
   deploy:
     name: Deploy
-    # if: github.ref == 'refs/heads/feat/knapsack' # Note: temporary until PR merged into main
+    if: github.ref == 'refs/heads/master' # Note: temporary until PR merged into main
     # needs: [build]
     runs-on: ubuntu-latest
     env:
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: feat/knapsack # Note: temporary until PR merged into main
+          ref: master # Note: temporary until PR merged into main
       - name: write auth
         run: |
           cat > ~/.netrc <<EOF
@@ -47,4 +47,4 @@ jobs:
       - name: git push to heroku for deploy
         run: |
           git remote add heroku $HEROKU_GIT_URL
-          git push heroku main
+          git push heroku master
