chore(knapsack): update node ref in engines to point to ^16.9.0

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "fix:target": "eslint --fix  --cache --ext .js,.jsx,.ts,.tsx",
     "fix:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run fix:target",
     "fresh": "npm run clean && lerna clean -y && rimraf node_modules && npm run setup",
-    "heroku-postbuild": "sh ./scripts/heroku-setup.sh",
+    "heroku-postbuild": "npm run setup",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx packages sites playwright --",
     "lint:target": "eslint --cache --ext .js,.jsx,.ts,.tsx",
     "lint:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run lint:target",
@@ -145,6 +145,6 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "engines": {
-    "node": ">=16.9"
+    "node": "^16.9.0"
   }
 }
