feat(components, core): Allow moving list items. (#2051)
## Changes

- Allows moving list items via buttons on local context menu
- Refactor local context menu to use floating-ui.  There is now a single local context menu which is positioned near the innermost element when a context is activated.

--- a/packages/bodiless-core/package.json
+++ b/packages/bodiless-core/package.json
@@ -31,6 +31,7 @@
     "@bodiless/cli": "^1.0.0-rc.37",
     "@bodiless/data": "^1.0.0-rc.37",
     "@bodiless/fclasses": "^1.0.0-rc.37",
+    "@floating-ui/react": "^0.23.1",
     "axios": "^0.21.0",
     "informed": "^4.44.0",
     "lodash": "^4.17.19",
