chore: move knapsack build to separate heroku-cleanup

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "fix:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run fix:target",
     "fresh": "npm run clean && lerna clean -y && rimraf node_modules && npm run setup",
     "heroku-prebuild": "echo 'Running heroku-pre-build'",
-    "heroku-postbuild": "npm run setup && npm run build --prefix ./sites/knapsack",
-    "heroku-cleanup": "echo 'Running heroku-cleanup",
+    "heroku-postbuild": "echo 'Running heroku-post-build' && npm run setup",
+    "heroku-cleanup": "echo 'Running heroku-cleanup' && npm run build --prefix ./sites/knapsack",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx packages sites playwright --",
     "lint:target": "eslint --cache --ext .js,.jsx,.ts,.tsx",
     "lint:change": "git diff --name-only --diff-filter=d master... | grep -e 'tsx$' -e 'jsx$' -e 'js$' -e 'ts$' | xargs -L 1 npm run lint:target",
