--- a/.github/workflows/knapsack.yml
+++ b/.github/workflows/knapsack.yml
@@ -9,24 +9,24 @@ on:
       - master # Note: temporary until PR merged into main
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Use Node.js v16.9
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16.9
-      - name: Setup
-        run: npm run setup
+  # build:
+  #   name: Build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Use Node.js v16.9
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 16.9
+  #     - name: Setup
+  #       run: npm run setup
 
   deploy:
     name: Deploy
     if: github.ref == 'refs/heads/master' # Note: temporary until PR merged into main
-    needs: [build]
+    # needs: [build]
     runs-on: ubuntu-latest
     env:
       HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
