docs(bodiless-documentation): Design tokens shadowing

--- a/sites/vital-examples/package.json
+++ b/sites/vital-examples/package.json
@@ -48,7 +48,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^8.0.0"
+    "react-markdown": "^8.0.0",
+    "gatsby": "^4.11.2"
   },
   "files": [
     "lib"
