--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -34,6 +34,8 @@
     "@bodiless/components": "^1.0.0-rc.37",
     "@bodiless/fclasses": "^1.0.0-rc.37",
     "@bodiless/hydration": "^1.0.0-rc.37",
+    "@bodiless/data": "^1.0.0-rc.37",
+    "@bodiless/vital-templates": "^1.0.0-rc.37",
     "@types/webpack": "^5.0.0",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
