--- a/packages/vital-examples/package.json
+++ b/packages/vital-examples/package.json
@@ -53,6 +53,7 @@
     "@bodiless/vital-table": "^1.0.0-rc.37",
     "@bodiless/vital-templates": "^1.0.0-rc.37",
     "@bodiless/vital-youtube": "^1.0.0-rc.37",
+    "@bodiless/vital-section": "^1.0.0-rc.37",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
