--- a/packages/vital-section/package.json
+++ b/packages/vital-section/package.json
@@ -39,6 +39,7 @@
     "@bodiless/components": "^1.0.0-rc.37",
     "@bodiless/vital-editors": "^1.0.0-rc.37",
     "@bodiless/vital-elements": "^1.0.0-rc.37",
+    "@bodiless/vital-link": "^1.0.0-rc.37",
     "tailwindcss": "^3.0.23"
   }
 }
