--- a/sites/vital-examples/package.json
+++ b/sites/vital-examples/package.json
@@ -32,6 +32,7 @@
     "@bodiless/vital-navigation": "^1.0.0-rc.37",
     "@bodiless/vital-table": "^1.0.0-rc.37",
     "@bodiless/vital-templates": "^1.0.0-rc.37",
+    "@bodiless/vital-section": "^1.0.0-rc.37",
     "@bodiless/webpack": "^1.0.0-rc.37",
     "autoprefixer": "^10.4.2",
     "docsify-cli": "^4.3.0",
