--- a/sites/vital-examples/package.json
+++ b/sites/vital-examples/package.json
@@ -21,6 +21,7 @@
     "@bodiless/search": "^1.0.0-rc.37",
     "@bodiless/next": "^1.0.0-rc.37",
     "@bodiless/ui": "^1.0.0-rc.37",
+    "@bodiless/vital-demo": "^1.0.0-rc.37",
     "@bodiless/vital-buttons": "^1.0.0-rc.37",
     "@bodiless/vital-editors": "^1.0.0-rc.37",
     "@bodiless/vital-elements": "^1.0.0-rc.37",
