fix: Addressing feedback form PR

--- a/packages/vital-examples/package.json
+++ b/packages/vital-examples/package.json
@@ -35,12 +35,16 @@
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.37",
+    "@bodiless/core": "^1.0.0-rc.37",
     "@bodiless/data": "^1.0.0-rc.37",
+    "@bodiless/layouts": "^1.0.0-rc.37",
+    "@bodiless/layouts-ui": "^1.0.0-rc.37",
     "@bodiless/fclasses": "^1.0.0-rc.37",
     "@bodiless/i18n": "^1.0.0-rc.37",
     "@bodiless/vital-accordion": "^1.0.0-rc.37",
     "@bodiless/vital-buttons": "^1.0.0-rc.37",
     "@bodiless/vital-card": "^1.0.0-rc.37",
+    "@bodiless/vital-content-listing": "^1.0.0-rc.37",
     "@bodiless/vital-editors": "^1.0.0-rc.37",
     "@bodiless/vital-elements": "^1.0.0-rc.37",
     "@bodiless/vital-flowcontainer": "^1.0.0-rc.37",
