--- a/packages/bodiless-scaffold/package.json
+++ b/packages/bodiless-scaffold/package.json
@@ -31,8 +31,7 @@
     "build": "run-p copy build:lib",
     "copy": "copyfiles -u 1 \"./src/templates/**/*\" \"./lib/\"",
     "build:lib": "tsc --version && tsc -p ./tsconfig.json",
-    "build:watch": "npm run build -- --watch",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "build:watch": "npm run build -- --watch"
   },
   "dependencies": {
     "copyfiles": "^2.1.1",
