--- a/packages/bodiless-scaffold/package.json
+++ b/packages/bodiless-scaffold/package.json
@@ -8,7 +8,7 @@
   "main": "./lib/index.js",
   "type": "module",
   "bin": {
-    "scaffold": "./bin/scaffold"
+    "scaffold": "./bin/scaffold.js"
   },
   "directories": {
     "lib": "lib",
@@ -27,7 +27,7 @@
     "access": "public"
   },
   "scripts": {
-    "scaffold": "./bin/scaffold",
+    "scaffold": "scaffold",
     "build": "run-p copy build:lib",
     "copy": "copyfiles -u 1 \"./src/templates/**/*\" \"./lib/\"",
     "build:lib": "tsc --version && tsc -p ./tsconfig.json",
