--- a/packages/vital-examples/package.json
+++ b/packages/vital-examples/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.37",
+    "@bodiless/components": "^1.0.0-rc.37",
     "@bodiless/core": "^1.0.0-rc.37",
     "@bodiless/data": "^1.0.0-rc.37",
     "@bodiless/layouts": "^1.0.0-rc.37",
