fix: Add package dependecy

--- a/packages/vital-examples/package.json
+++ b/packages/vital-examples/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.38",
+    "@bodiless/core": "^1.0.0-rc.38",
     "@bodiless/data": "^1.0.0-rc.38",
     "@bodiless/fclasses": "^1.0.0-rc.38",
     "@bodiless/i18n": "^1.0.0-rc.38",
