feat(component scaffold): Component Scaffolder (#2100)
* feat(component scaffold): Component Scaffolder


---------

Co-authored-by: Chris Oden <coden@kenvue.com>
Co-authored-by: wodenx <coden@its.jnj.com>

--- a/packages/__vital__/package.json
+++ b/packages/__vital__/package.json
@@ -34,6 +34,7 @@
     "@bodiless/cli": "^1.0.0-rc.38",
     "@bodiless/data": "^1.0.0-rc.38",
     "@bodiless/fclasses": "^1.0.0-rc.38",
+    "@bodiless/hydration": "^1.0.0-rc.38",
     "@bodiless/i18n": "^1.0.0-rc.38",
     "@bodiless/vital-accordion": "^1.0.0-rc.38",
     "@bodiless/vital-buttons": "^1.0.0-rc.38",
