--- a/packages/vital-examples/package.json
+++ b/packages/vital-examples/package.json
@@ -22,6 +22,9 @@
     "type": "git",
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "run-p build:lib copy",
     "build:lib": "tsc -p ./tsconfig.json",
