--- a/sites/vital-examples/package.json
+++ b/sites/vital-examples/package.json
@@ -24,6 +24,7 @@
     "@bodiless/vital-demo": "^1.0.0-rc.39",
     "@bodiless/vital-editors": "^1.0.0-rc.39",
     "@bodiless/vital-elements": "^1.0.0-rc.39",
+    "@bodiless/vital-examples": "^1.0.0-rc.39",
     "@bodiless/vital-flowcontainer": "^1.0.0-rc.39",
     "@bodiless/vital-image": "^1.0.0-rc.39",
     "@bodiless/vital-layout": "^1.0.0-rc.39",
@@ -49,8 +50,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^8.0.0",
-    "vital-examples": "^1.0.0-rc.39"
+    "react-markdown": "^8.0.0"
   },
   "files": [
     "lib"
