--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ node_modules
 
 # Temporary files
 .DS_Store
-*.swp
-*.swo
+.swp
 .eslintcache
 *.tsbuildinfo
 # jetbrains files:
@@ -36,5 +35,6 @@ test-report.xml
 playwright-report
 
 # API doc
+**/doc/api
 test-results/
 playwright-report/
