Reorganization and tweaks

--- a/sites/__vital_next__/.env.site
+++ b/sites/__vital_next__/.env.site
@@ -46,7 +46,7 @@ BODILESS_DOCS_DESTINATION_PATH='./public/generated/doc'
 # Maximum depth to search npm dependency tree for bodiless docs
 # BODILESS_DOCS_MAX_DEPTH=5
 # Enable building API documentation for your packages
-# BODILESS_DOCS_API_ENABLED=0
+BODILESS_DOCS_API_ENABLED=1
 
 # The extended backend logging is disabled by default.
 # To enable it - uncomment the following line.
