--- a/sites/knapsack/package.json
+++ b/sites/knapsack/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.38",
+    "@bodiless/data": "^1.0.0-rc.38",
     "@bodiless/fclasses": "^1.0.0-rc.38",
     "@bodiless/core": "^1.0.0-rc.38",
     "@bodiless/vital-accordion": "^1.0.0-rc.38",
