Add 'behavior' AC

--- a/packages/vital-examples/package.json
+++ b/packages/vital-examples/package.json
@@ -42,6 +42,7 @@
     "@bodiless/layouts-ui": "^1.0.0-rc.37",
     "@bodiless/fclasses": "^1.0.0-rc.37",
     "@bodiless/i18n": "^1.0.0-rc.37",
+    "@bodiless/schema-org": "^1.0.0-rc.37",
     "@bodiless/vital-accordion": "^1.0.0-rc.37",
     "@bodiless/vital-buttons": "^1.0.0-rc.37",
     "@bodiless/vital-card": "^1.0.0-rc.37",
