--- a/packages/vital-examples/package.json
+++ b/packages/vital-examples/package.json
@@ -39,9 +39,11 @@
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.39",
+    "@bodiless/components": "^1.0.0-rc.39",
     "@bodiless/core": "^1.0.0-rc.39",
     "@bodiless/data": "^1.0.0-rc.39",
     "@bodiless/fclasses": "^1.0.0-rc.39",
+    "@bodiless/schema-org": "^1.0.0-rc.39",
     "@bodiless/vital-accordion": "^1.0.0-rc.39",
     "@bodiless/vital-buttons": "^1.0.0-rc.39",
     "@bodiless/vital-card": "^1.0.0-rc.39",
