--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -28,7 +28,8 @@
     "build:watch": "npm run build:lib -- --watch",
     "dev": "npm run build:watch",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
-    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
+    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\"",
+    "tokens": "node ./lib/cjs/scripts/parseV2J.js"
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.42",
