Code reorg and better search

--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -29,7 +29,9 @@
     "dev": "npm run build:watch",
     "copy": "copyfiles -u 1 \"./src/*.css\" \"./lib/\"",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\"",
-    "tokens": "node ./lib/cjs/scripts/parseV2J.js"
+    "tokens:clean": "rimraf \"src/generated/*\"",
+    "tokens:find": "node ./lib/cjs/scripts/bin/find-tokens.js",
+    "tokens:parse": "node ./lib/cjs/scripts/bin/parse-tokens.js"
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.42",
